--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.swagpancakes</groupId>
     <artifactId>Origins-Bukkit</artifactId>
-    <version>Build 1</version>
+    <version>Dev Build 2</version>
     <packaging>jar</packaging>
 
     <name>Origins-Bukkit</name>
