--- a/pom.xml
+++ b/pom.xml
@@ -98,5 +98,10 @@
             <artifactId>ProtocolLib</artifactId>
             <version>4.7.0</version>
         </dependency>
+        <dependency>
+	   <groupId>com.github.dmulloy2</groupId>
+	   <artifactId>PacketWrapper</artifactId>
+	   <version></version>
+        </dependency>
     </dependencies>
 </project>
