--- a/v1_17_R1/pom.xml
+++ b/v1_17_R1/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>originsbukkit</artifactId>
         <groupId>me.swagpancakes</groupId>
-        <version>Build 1-RELEASE</version>
+        <version>Build 2-ALPHA</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
