--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>originsbukkit</artifactId>
         <groupId>me.swagpancakes</groupId>
-        <version>Build 1-RELEASE</version>
+        <version>Build 2-ALPHA</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,7 +16,6 @@
     </properties>
 
     <build>
-        <finalName>Origins-Bukkit ${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -40,6 +39,12 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <artifactSet>
+                                <includes>
+                                    <include>me.swagpancakes.originsbukkit:v_1_17_R1</include>
+                                    <include>me.swagpancakes.originsbukkit:v_1_18_R1</include>
+                                </includes>
+                            </artifactSet>
                         </configuration>
                     </execution>
                 </executions>
@@ -102,18 +107,6 @@
             <artifactId>ProtocolLib</artifactId>
             <version>4.7.0</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.swagpancakes</groupId>
-            <artifactId>v1_17_R1</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.swagpancakes</groupId>
-            <artifactId>v1_18_R1</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
